--- a/src/Components/Hero/Hero.css
+++ b/src/Components/Hero/Hero.css
@@ -46,6 +46,12 @@
     color: white;
     font-size: 22px;
     font-weight: 500;
+    
+}
+.latest{
+    display:center;
+    align-items:center;
+    padding-left:20px;
 }
 .hero-right{
     flex: 1;
